[gd_scene load_steps=13 format=3 uid="uid://djnji1v6uknmq"]

[ext_resource type="Script" path="res://src/entities/environment/sealed_gate/sealed_gate_input.gd" id="1_1rouk"]
[ext_resource type="AudioStream" uid="uid://jowj0owcoo1i" path="res://src/entities/environment/sealed_gate/assets/sfx/Fae Rattle (entering gate_).mp3" id="2_ea7nb"]
[ext_resource type="Texture2D" uid="uid://d1wf3q5v73njh" path="res://assets/sprite/gate/recepticle/vessel_2.png" id="2_p0tm5"]
[ext_resource type="Texture2D" uid="uid://bcee1yupgr4aw" path="res://assets/sprite/gate/recepticle/vessel_0.png" id="3_t2gm8"]
[ext_resource type="Texture2D" uid="uid://c46vsn1xllapd" path="res://assets/sprite/gate/recepticle/vessel_1.png" id="4_060iw"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lh43c"]
vertices = PackedVector2Array(56, -22, 63, -7, 65, 0, -64, 0, -60, -12, -53, -31, 39, -52, 43.3203, -46.3906, 49, -39, -46, -44, -41, -53, -51, -156, -43, -186, 42, -186, 50, -156, -62, -98, -43, -60, 43, -63, -49, -74, 47, -71, 53, -81, -56, -88, 59, -93, 66, -140, 68, -130, 69, -122, 67, -109, -68, -112, -69, -125, -67, -139, -55, -153)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 0, 5, 9, 10), PackedInt32Array(11, 12, 13, 14, 15), PackedInt32Array(6, 10, 16, 17), PackedInt32Array(17, 16, 18, 19), PackedInt32Array(20, 19, 18, 21, 22), PackedInt32Array(23, 24, 25, 26, 22, 21, 15, 14), PackedInt32Array(11, 15, 27, 28, 29, 30)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, 0, -60, -12, -53, -31, -46, -44, -41, -53, -43, -60, -49, -74, -56, -88, -62, -98, -68, -112, -69, -125, -67, -139, -55, -153, -51, -156, -43, -186, 42, -186, 50, -156, 66, -140, 68, -130, 69, -122, 67, -109, 59, -93, 53, -81, 47, -71, 43, -63, 39, -52, 43.3175, -46.3873, 49, -39, 56, -22, 63, -7, 65, 0)])
agent_radius = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_padhp"]
radius = 20.8
height = 49.7778

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhe26"]
size = Vector2(222.4, 23.1111)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pop0m"]
radius = 72.0
height = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1c81m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5b4a"]
radius = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3nsh"]
size = Vector2(126, 10)

[node name="SealedGateInput" type="Node2D"]
script = ExtResource("1_1rouk")
SFX_gate_fill = Array[AudioStream]([ExtResource("2_ea7nb")])

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_lh43c")
navigation_layers = 3

[node name="VesselBase" type="Sprite2D" parent="."]
position = Vector2(0, -87)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_p0tm5")

[node name="VesselMid" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -87)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_t2gm8")

[node name="VesselFront" type="Sprite2D" parent="."]
position = Vector2(0, -87)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_060iw")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(4, -20)
scale = Vector2(0.625, 1.125)
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CapsuleShape2D_padhp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-5.6, 29.3333)
shape = SubResource("RectangleShape2D_qhe26")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -24.0
offset_top = -64.0
offset_right = 24.0
offset_bottom = -41.0
text = "0/10"
horizontal_alignment = 1

[node name="InputArea" type="Area2D" parent="."]
position = Vector2(0, -128)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
position = Vector2(0, -32)
shape = SubResource("CapsuleShape2D_pop0m")

[node name="SwarmTarget" type="CharacterBody2D" parent="."]
position = Vector2(4, -20)
collision_layer = 0
collision_mask = 2
motion_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwarmTarget"]
shape = SubResource("CircleShape2D_1c81m")

[node name="TargetArea" type="Area2D" parent="SwarmTarget"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwarmTarget/TargetArea"]
position = Vector2(-3, -11)
shape = SubResource("CircleShape2D_g5b4a")
debug_color = Color(0, 0.635406, 0.417574, 0.42)

[node name="ReleaseAgentTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SwarmNodeOnlyGate" type="StaticBody2D" parent="."]
position = Vector2(0, -152)
collision_layer = 128
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwarmNodeOnlyGate"]
position = Vector2(2, -5)
shape = SubResource("RectangleShape2D_c3nsh")

[connection signal="body_entered" from="InputArea" to="." method="_on_input_area_body_entered"]
[connection signal="body_entered" from="SwarmTarget/TargetArea" to="." method="_on_target_area_body_entered"]
[connection signal="timeout" from="ReleaseAgentTimer" to="." method="_on_release_agent_timer_timeout"]
